--- a/view/activity-log/admin/event/browse.phtml
+++ b/view/activity-log/admin/event/browse.phtml
@@ -15,8 +15,9 @@
             <th><?php echo $this->translate('Date'); ?></th>
             <th><?php echo $this->translate('User'); ?></th>
             <th><?php echo $this->translate('IP'); ?></th>
-            <th><?php echo $this->translate('Resource'); ?></th>
             <th><?php echo $this->translate('Event'); ?></th>
+            <th><?php echo $this->translate('Resource'); ?></th>
+            <th><?php echo $this->translate('Message'); ?></th>
         </tr>
     </thead>
     <tbody>
@@ -25,14 +26,21 @@
         $dateTime = new DateTime('@' . $loggedEvent->created());
         $dateTime->setTimezone(new DateTimeZone($this->setting('time_zone', 'UTC')));
         $user = $loggedEvent->user();
+        $eventParams = $this->trigger(
+            'activity_log.event_messages',
+            ['loggedEvent' => $loggedEvent, 'messages' => []],
+            true,
+            [$loggedEvent->event()]
+        );
         ?>
         <tr>
             <td><?php echo $loggedEvent->id(); ?></td>
-            <td><?php echo $dateTime->format('Y-m-d H:i:s.v'); ?></td>
+            <td><?php echo $dateTime->format('Y-m-d<\b\r>H:i:s.v'); ?></td>
             <td><?php echo $user ? sprintf('%s<br>%s', $user->link($user->name()), $user->displayRole()) : ''; ?></td>
             <td><?php echo $this->hyperlink($loggedEvent->ip(), sprintf('https://whatismyipaddress.com/ip/%s', $loggedEvent->ip()), ['target' => '_blank']); ?></td>
-            <td><?php echo $loggedEvent->resource(); ?></td>
             <td><?php echo $loggedEvent->event(); ?></td>
+            <td><?php echo $loggedEvent->resource(); ?></td>
+            <td><?php echo implode('<br>', $eventParams['messages']); ?></td>
         </tr>
         <?php endforeach; ?>
     </tbody>
