--- a/view/activity-log/admin/event/browse.phtml
+++ b/view/activity-log/admin/event/browse.phtml
@@ -1,4 +1,7 @@
-<?php $this->htmlElement('body')->appendAttribute('class', 'activity-log-events'); ?>
+<?php
+$this->headLink()->appendStylesheet($this->assetUrl('css/events.css', 'ActivityLog'));
+$this->htmlElement('body')->appendAttribute('class', 'activity-log-events');
+?>
 
 <?php echo $this->pageTitle($this->translate('Events'), 1, $this->translate('Activity Log')); ?>
 
@@ -53,16 +56,18 @@
             <td><?php echo $loggedEvent->id(); ?></td>
             <td><?php echo $dateTime->format('Y-m-d<\b\r>H:i:s.v'); ?></td>
             <td><?php echo $user ? sprintf('%s<br>%s', $user->link($user->name()), $user->role()) : ''; ?></td>
-            <td><?php echo $this->hyperlink($loggedEvent->ip(), sprintf('https://whatismyipaddress.com/ip/%s', $loggedEvent->ip()), ['target' => '_blank']); ?></td>
+            <td><?php echo $loggedEvent->ip(); ?></td>
             <td><?php echo $loggedEvent->event(); ?></td>
             <td><?php echo $loggedEvent->resource(); ?></td>
             <td>
                 <?php echo implode('<br>', $eventParams['messages']); ?>
+                <?php if ($loggedEvent->data()): ?>
                 <div><?php echo $this->hyperlink($this->translate('View event data'), '#', [
                     'data-sidebar-selector' => '#show-details',
                     'data-sidebar-content-url' => $this->url('admin/activity-log/id', ['action' => 'show-details', 'id' => $loggedEvent->id()], true),
                     'class' => 'sidebar-content',
                 ]); ?></div>
+                <?php endif; ?>
             </td>
         </tr>
         <?php endforeach; ?>
