--- a/asset/css/events.css
+++ b/asset/css/events.css
@@ -4,3 +4,12 @@ tr:nth-child(even) {
 tr:nth-child(odd) {
     background-color: #ffffff;
 }
+tr > th:first-child {
+    width: 8% !important;
+}
+tr > th:last-child {
+    width: 24% !important;
+}
+tr > td {
+    font-size: 14px;
+}
