--- a/view/activity-log/admin/event/browse.phtml
+++ b/view/activity-log/admin/event/browse.phtml
@@ -7,7 +7,7 @@ $this->htmlElement('body')->appendAttribute('class', 'activity-log-events');
 
 <div class="browse-controls">
     <?php echo $this->pagination(); ?>
-    <?php echo $this->hyperlink('View filters', [], ['class' => 'sidebar-content', 'data-sidebar-selector' => '#sidebar-filters']); ?>
+    <?php echo $this->hyperlink('View filters', '#', ['class' => 'sidebar-content button', 'role' => 'button', 'data-sidebar-selector' => '#sidebar-filters']); ?>
 </div>
 
 <?php if ($loggedEvents): ?>
