--- a/asset/css/events.css
+++ b/asset/css/events.css
@@ -1,17 +1,23 @@
-tr:nth-child(even) {
+table {
+    table-layout: auto;
+}
+
+tr:nth-child(even) td {
     background-color: #f2f2f2;
 }
-tr > th:nth-child(2) {
-    width: 30%;
+tr > td:nth-child(2) ul {
+    min-width: 10rem
 }
 tr > td {
     font-size: 14px;
-    overflow-wrap: anywhere;
+    min-width: 5rem;
 }
 
 .browse-controls {
     display: flex;
     flex-wrap: wrap;
+    width: calc(100% - 3rem);
+    margin-bottom: -2.75rem;
 }
 
 .browse-controls nav.pagination {
@@ -19,5 +25,25 @@ tr > td {
 }
 
 .browse-controls .button {
-    margin-left: auto;
+    margin-left: 1rem;
+}
+
+.event-id {
+    max-width: 3rem;
+}
+
+.event-user a,
+.event-name {
+    min-width: 7rem;
+    word-break: break-all;
+}
+
+.tablesaw-swipe .tablesaw-swipe-cellpersist.event-id {
+    border-right: 0;
+}
+
+@media screen and (max-width: 640px) {
+  .tablesaw tr:nth-child(odd) td:first-of-type {
+    background-color: transparent;
+  }
 }
