--- a/view/activity-log/admin/event/browse.phtml
+++ b/view/activity-log/admin/event/browse.phtml
@@ -58,13 +58,13 @@ $this->htmlElement('body')->appendAttribute('class', 'activity-log-events');
     <div class="sidebar-content"></div>
 </div>
 
-<div id="sidebar-filters" class="sidebar">
+<div id="sidebar-filters" class="sidebar" aria-labelledby="filter-events-heading" role="dialog">
     <?php echo $this->hyperlink('', '#', [
         'class' => 'sidebar-close o-icon-close',
         'title' => $this->translate('Close'),
     ]); ?>
     <div class="sidebar-content">
-        <h3><?php echo $this->translate('Filter events'); ?></h3>
+        <h3 id="filter-events-heading"><?php echo $this->translate('Filter events'); ?></h3>
         <?php echo $this->form()->openTag($eventFilterForm); ?>
             <?php echo $this->formRow($eventFilterForm->get('id')); ?>
             <?php echo $this->formRow($eventFilterForm->get('event')); ?>
