Clarify events and event names

--- a/view/activity-log/admin/event/browse.phtml
+++ b/view/activity-log/admin/event/browse.phtml
@@ -23,7 +23,7 @@ $this->htmlElement('body')->appendAttribute('class', 'activity-log-events');
             <th class="event-date"><?php echo $this->translate('Date'); ?></th>
             <th class="event-user"><?php echo $this->translate('User'); ?></th>
             <th class="event-ip"><?php echo $this->translate('IP'); ?></th>
-            <th class="event-name"><?php echo $this->translate('Event'); ?></th>
+            <th class="event-name"><?php echo $this->translate('Event name'); ?></th>
             <th class="event-resource"><?php echo $this->translate('Resource'); ?></th>
         </tr>
     </thead>
